--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+body{
+  background-color: #9266ff;
+}
+.App{
+  background-color: #3f3160;
+  min-height: 650px;
+  width:400px;
+  margin: 40px auto;
+}
+#to-do-from input{
+  background-color: rgb(27, 112, 137);
+  border: 0;
+  width: 200px;
+  height: 50px;
+  margin: 20px;
+  padding: 0 20px;
+  font-size: 18px;
+  border-radius: 10px;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#to-do-from input::placeholder{
+color: rgba(255, 255, 255, .5);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#to-do-from input:focus, #to-do-from button:focus{
+  outline: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+#to-do-from button{
+  height: 50px;
+  width: 80px;
+  border: 0;
+  background-color: rgb(202, 156, 24);
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #fff;
+  font-size: 18px;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
